// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SetupTOTPModal Presentation step display with message 1`] = `
<form class="wrapper">
  <div class="content ">
    <div>This is a message</div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Cancel</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;

exports[`SetupTOTPModal Presentation step regular display 1`] = `
<form class="wrapper">
  <div class="content ">
    <p>This wizard will enable Two Factor Authentication (2FA) on your ProtonMail
      account. 2FA will make your ProtonMail account more secure so we recommend
      enabling it.</p>
    <p>
      <strong>If you have never used 2FA before, we strongly recommend you reading our
        2FA Guide first.</strong>
    </p>
    <div>
      <a class="a" href="https://protonmail.com/support/knowledge-base/two-factor-authentication/"
      target="_blank" rel="noopener noreferrer">2FA GUIDE</a>
    </div>
  </div>
  <footer class="footer">
    <button type="reset" value="Reset">Cancel</button>
    <button type="submit" value="Submit">Next</button>
  </footer>
</form>
`;
